--- a/Ls1/ls1.css
+++ b/Ls1/ls1.css
@@ -137,3 +137,11 @@ table {
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
 }
+
+.col-md-2 {
+    width: 12% !important;
+}
+.col-md-10 {
+    width: 88% !important;
+    padding: 0 129px !important;
+}
